# dora-moveit2

./: .gitignore  CLAUDE.md  MUJOCO_LOG.TXT  README.md  RELEASE.md  run.md
course/: README.md  (+9 more)
dora_moveit/: pyproject.toml  requirements.txt  setup.cfg
dora_moveit/dora_moveit/: __init__.py  config.py  create_scene_with_obstacles.py  visualize_scene.py
dora_moveit/dora_moveit/collision_detection/: collision_check_op.py  collision_lib.py  pointcloud_collision.py
dora_moveit/dora_moveit/ik_solver/: advanced_ik_solver.py  ik_op.py
dora_moveit/dora_moveit/motion_planner/: planner_ompl_with_collision_op.py  planner_simple_op.py  planning_scene_op.py
dora_moveit/dora_moveit/trajectory_execution/: trajectory_executor.py
dora_moveit/dora_moveit/workflow/: base_controller.py  dual_move_group.py  motion_commander.py  move_group.py
dora_moveit/tests/: test_move_group_async.py  test_move_group_handle_event.py  test_move_group_node_injection.py  test_planner_simple.py
examples/dual_gen72/: pyproject.toml
examples/dual_gen72/dataflows/: dual_gen72_mujoco.yml  dual_gen72_real.yml
examples/dual_gen72/dual_gen72_demo/config/: dual_gen72.py
examples/dual_gen72/dual_gen72_demo/nodes/: dual_arm_final_demo.py  dual_arm_real_demo.py  dual_gen72_real_robot_node.py  planner.py  realman_dual_driver.py
examples/dual_gen72/models/: dual_gen72.xml
examples/hunter_with_arm/: README.md  pyproject.toml
examples/hunter_with_arm/dataflows/: gen72_mujoco.yml  gen72_real.yml  hunter_arm_mujoco.yml  movegroup_mujoco.yml
examples/hunter_with_arm/hunter_arm_demo/: __init__.py
examples/hunter_with_arm/hunter_arm_demo/nodes/: example_movegroup.py  ik_solver.py  multi_view_capture_node.py  planner.py  planning_scene.py  trajectory_executor.py  vehicle_controller.py
examples/hunter_with_arm/models/: GEN72_base.xml  hunter_se_with_arm.xml  hunter_se_with_arm_and_pipes.xml  industrial_pipes_scene.xml  scene_with_obstacles.xml
examples/lekiwi_pick_place/: pyproject.toml
examples/lekiwi_pick_place/dataflows/: lekiwi_pick_place_mujoco.yml
examples/lekiwi_pick_place/models/: lekiwi_scene.xml
examples/move_group_demo/: pyproject.toml  test_movegroup.py
examples/move_group_demo/dataflows/: MUJOCO_LOG.TXT  custom_demo_mujoco.yml  gen72_gripper_mujoco.yml  moveit_example_mujoco.yml  single_arm_avoidance_mujoco.yml  single_arm_grasping_mujoco.yml  ur5e_example_mujoco.yml
examples/move_group_demo/models/: GEN72_base.xml  GEN72_with_gripper.xml  pick_and_place_demo.py  rebot_pickplace.xml  so101_pickplace.xml  ur5e.xml
examples/nano_pick_place/: pyproject.toml
examples/nano_pick_place/dataflows/: nano_pick_place_mujoco.yml
examples/nano_pick_place/models/: nano_arm.xml  nano_full.xml
examples/nano_pick_place/scripts/: convert_urdf_to_mjcf.py
(+55 files in other folders)
