[project]
name = "dora-moveit"
version = "0.1.0"
description = "Robot motion planning library for the dora-rs dataflow framework"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "dora-rs >= 0.3.0",
    "numpy >= 1.20.0",
    "pyarrow >= 10.0.0",
    "scipy >= 1.7.0",
]

[project.optional-dependencies]
dev = ["pytest >= 7.0", "ruff >= 0.9.0"]

[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dora_moveit*"]
