[project]
name = "move-group-demo"
version = "0.1.0"
description = "MoveGroup API demo — dora-moveit equivalent of ROS MoveIt example"
requires-python = ">=3.9"
dependencies = ["dora-moveit"]

[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["move_group_demo*"]
